# Modyn

./: .gitignore  CMakeLists.txt  README.md  build.sh  plugins  run_all_tests.sh
.claude/: settings.local.json
api/: CMakeLists.txt  api_server_main.c  rest_server.c  rest_server.h
backend/dummy/: CMakeLists.txt  dummy_engine.c
cmake/: ModynConfig.cmake.in  ModynConfigVersion.cmake.in  modyn.pc.in
core/: inference_engine.c  inference_engine.h  instance_manager.h  memory_pool.c  memory_pool.h  model_manager.c  model_manager.h  model_parser.c  model_parser.h  multimodal.c  multimodal.h  plugin_factory.c  plugin_factory.h  registry.c  tensor.c  tensor.h  unified_pipeline.c  unified_pipeline.h
examples/: CMakeLists.txt  basic_inference.c  component_integration_example.c  dummy_infer_main.c  model_management.c  multimodal_inference.c  plugin_template.c  plugin_usage.c  simple_tts_pipeline.c  unified_pipeline_example.c
pipeline/: pipeline_manager.c  pipeline_manager.h
plugins/: CMakeLists.txt  plugin_config_example.json.in  plugin_test_runner.c
plugins/onnx_runtime/: CMakeLists.txt  onnx_runtime_plugin.c  plugin.json.in  test_onnx_plugin.c
src/: component_manager.c  component_manager.h  model_loader_example.c  modyn.h  modyn_autoload.c  modyn_device_mgmt.c  modyn_model_loading.c  modyn_stubs.c  pipeline_example.c  rknn_device_example.c  rknn_zero_copy_example.c  utility_macros_example.c
src/devices/dummy/: dummy_device.c  dummy_device_gpu.c
src/pipeline/: dummy_node.c  dummy_node.h  modyn_pipeline.c  modyn_pipeline.h
tests/: CMakeLists.txt  integration_test.c  test_all_in_one.c  test_memory_pool.c  test_tensor.c
tools/: CMakeLists.txt
tools/benchmark/: CMakeLists.txt  benchmark_tool.c  benchmark_utils.c  benchmark_utils.h
tools/model_converter/: CMakeLists.txt  model_converter.c
utils/: image_utils.c  image_utils.h  logger.c  logger.h  preprocessing.c  preprocessing.h
